# Nuevo-proyecto

./: CMakeLists.txt
include/: actividad.h  inicioSesion.h  organizador.h  usuario.h
src/: a.out  actividad.cc  actividades.txt  inicioSesion.cc  log.txt  menu.cc  organizador.cc  preinscritos.txt  usuario.cc
tests/: gestionar_actividades_test.cc  uso_usuario_test.cc  visualizar_test.cc
